--- a/src/app/forwarding-form/forwarding-form.component.html
+++ b/src/app/forwarding-form/forwarding-form.component.html
@@ -7,37 +7,37 @@
     <form #portForwarding="ngForm">
       <h4 class="mat-h4">1. What are the ports that you need forwarded and to what IP address or addresses?</h4>
       <table class="forward-full-width" cellspacing="2"><tr>
-          <td><md-input-container class="forward-full-width" id="ports">
+          <td><md-form-field class="forward-full-width" id="ports">
             <input [(ngModel)]="model.ports" name="ports" mdInput placeholder="Ports" >
-          </md-input-container></td>
-          <td><md-input-container class="forward-full-width" id="ipaddress">
+          </md-form-field></td>
+          <td><md-form-field class="forward-full-width" id="ipaddress">
             <input [(ngModel)]="model.ipaddress" name="ipaddress" mdInput required placeholder="IP Address">
-          </md-input-container></td>
+          </md-form-field></td>
         </tr></table>
       <p>
-        <md-input-container class="forward-full-width">
+        <md-form-field class="forward-full-width">
           <textarea [(ngModel)]="model.dmz" name="dmz" mdInput mdTextareaAutosize placeholder="2. If it’s a DMZ request, what is the IP address that you need in the DMZ?"></textarea>
-        </md-input-container>
+        </md-form-field>
       </p>
       <p>
-        <md-input-container class="forward-full-width">
+        <md-form-field class="forward-full-width">
           <textarea [(ngModel)]="model.connectedONT" name="ONT" mdInput mdTextareaAutosize placeholder="3. Is the DVR directly connected to the ONT?"></textarea>
-        </md-input-container>
+        </md-form-field>
       </p>
       <p>
-        <md-input-container class="forward-full-width">
+        <md-form-field class="forward-full-width">
           <textarea [(ngModel)]="model.staticIP" name="staticIP" mdInput mdTextareaAutosize placeholder="4. If Yes to question 3, then did you set a static IP address on the DVR or is it DHCP?"></textarea>
-        </md-input-container>
+        </md-form-field>
       </p>
       <p>
-        <md-input-container class="forward-full-width">
+        <md-form-field class="forward-full-width">
           <textarea [(ngModel)]="model.router" name="router" mdInput mdTextareaAutosize placeholder="5. If No to question 3, then is it connected to a router or switch?"></textarea>
-        </md-input-container>
+        </md-form-field>
       </p>
       <p>
-        <md-input-container class="forward-full-width">
+        <md-form-field class="forward-full-width">
           <textarea [(ngModel)]="model.routerIP" name="routerIP" mdInput mdTextareaAutosize placeholder="6. If DVR is connected directly to a router, then we need the IP address of the router and the ports?"></textarea>
-        </md-input-container>
+        </md-form-field>
       </p>
     </form>
   </div>
@@ -45,7 +45,7 @@
     <md-card>
       <md-card-title>{{title}} Template Preview</md-card-title>
       <md-card-content>
-        <md-input-container class="forward-full-width">
+        <md-form-field class="forward-full-width">
           <textarea #forward mdInput mdTextareaAutosize readonly>What are the ports that you need forwarded and to what IP address or addresses?
 Ports: {{model.ports}}    IP Address: {{ model.ipaddress }}
 
@@ -64,7 +64,7 @@ If No to question 3, then is it connected to a router or switch?
 If DVR is connected directly to a router, then we need the IP address of the router and the ports?
 {{ model.routerIP }}
           </textarea>
-        </md-input-container>
+        </md-form-field>
       </md-card-content>
       <md-card-actions>
         <button md-button [ngxClipboard]='forward'>COPY</button>
