--- a/src/app/work-form/work-form.component.html
+++ b/src/app/work-form/work-form.component.html
@@ -4,24 +4,24 @@
 <br>
 <div fxLayout="row">
   <div fxFlexOffset="5%" fxFlex="45%">
-    <md-input-container class="work-full-width">
+    <md-form-field class="work-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.summary" name="summary" placeholder="Summary"></textarea>
-    </md-input-container>
-    <md-input-container class="work-full-width">
+    </md-form-field>
+    <md-form-field class="work-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.history" name="history" placeholder="History"></textarea>
-    </md-input-container>
-    <md-input-container class="work-full-width">
+    </md-form-field>
+    <md-form-field class="work-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.results" name="results" placeholder="Test Results"></textarea>
-    </md-input-container>
-    <md-input-container class="work-full-width">
+    </md-form-field>
+    <md-form-field class="work-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.recommendations" name="recommendations" placeholder="Recommendations"></textarea>
-    </md-input-container>
+    </md-form-field>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
     <md-card>
       <md-card-title>{{title}} Template Preview</md-card-title>
       <md-card-content>
-        <md-input-container class="work-full-width">
+        <md-form-field class="work-full-width">
           <textarea #work mdInput mdTextareaAutosize readonly>Summary: {{model.summary}}
 
 History: {{model.history}}
@@ -30,7 +30,7 @@ Test Results: {{model.results}}
 
 Recommendations: {{model.recommendations}}
           </textarea>
-        </md-input-container>
+        </md-form-field>
       </md-card-content>
       <md-card-actions>
         <button md-button [ngxClipboard]='work'>COPY</button>
