--- a/src/app/billing-form/billing-form.component.html
+++ b/src/app/billing-form/billing-form.component.html
@@ -6,14 +6,14 @@
   <div fxFlexOffset="5%" fxFlex="45%">
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-input-container class="billing-full-width">
+        <md-form-field class="billing-full-width">
           <input [(ngModel)]="model.balance" name="balance" mdInput placeholder="Total Outstanding Amount (Tableau)" >
-        </md-input-container>
+        </md-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-input-container class="billing-full-width">
+        <md-form-field class="billing-full-width">
           <input [(ngModel)]="model.due" name="due" mdInput placeholder="Amount Due" >
-        </md-input-container>
+        </md-form-field>
       </div>
     </div>
     <div fxLayout="row">
@@ -24,9 +24,9 @@
         </md-select>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-input-container class="billing-full-width">
+        <md-form-field class="billing-full-width">
           <input [(ngModel)]="model.account" name="account" mdInput placeholder="Account Number Requested" >
-        </md-input-container>
+        </md-form-field>
       </div>
     </div>
     <br>
@@ -38,15 +38,15 @@
       </div>
     </div>
     <br>
-    <md-input-container class="billing-full-width">
+    <md-form-field class="billing-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.comments" name="comments" placeholder="Additional Comments"></textarea>
-    </md-input-container>
+    </md-form-field>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
     <md-card>
       <md-card-title>{{title}} Template Preview</md-card-title>
       <md-card-content>
-        <md-input-container class="billing-full-width">
+        <md-form-field class="billing-full-width">
           <textarea #billing mdInput mdTextareaAutosize readonly>Total Outstanding Amount (Tableau): {{model.balance}}
 
 Amount Due: {{model.due}}
@@ -59,7 +59,7 @@ I.D. Verified: {{model.verified}}
 
 Additional Comments: {{model.comments}}
           </textarea>
-        </md-input-container>
+        </md-form-field>
       </md-card-content>
       <md-card-actions>
         <button md-button [ngxClipboard]='billing'>COPY</button>
