--- a/src/app/highspeed-form/highspeed-form.component.html
+++ b/src/app/highspeed-form/highspeed-form.component.html
@@ -12,32 +12,32 @@
         </md-select>
       </div>
       <div fxFlexOffset="2%" fxFlex>
-        <md-input-container class="highspeed-full-width">
+        <md-form-field class="highspeed-full-width">
           <input [(ngModel)]="user.firstname" name="firstname" mdInput placeholder="Firstname" >
-        </md-input-container>
+        </md-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex>
-        <md-input-container class="highspeed-full-width">
+        <md-form-field class="highspeed-full-width">
           <input [(ngModel)]="user.lastname" name="lastname" mdInput placeholder="Lastname" >
-        </md-input-container>
+        </md-form-field>
       </div>
     </div>
     <div fxLayout="row">
-      <md-input-container class="highspeed-full-width">
+      <md-form-field class="highspeed-full-width">
         <input [(ngModel)]="model.cusname" name="cusname" mdInput placeholder="Customer's Name" >
-      </md-input-container>
+      </md-form-field>
     </div>
     <div fxLayout="row">
-      <md-input-container class="highspeed-full-width">
+      <md-form-field class="highspeed-full-width">
         <textarea mdInput mdTextareaAutosize [(ngModel)]="model.info" name="info" placeholder="Response"></textarea>
-      </md-input-container>
+      </md-form-field>
     </div>
   </div>
   <div fxFlexOffset="5%" fxFlex="44%">
     <md-card>
       <md-card-title>{{title}} Template Preview</md-card-title>
       <md-card-content>
-        <md-input-container class="highspeed-full-width">
+        <md-form-field class="highspeed-full-width">
           <textarea #highspeed mdInput mdTextareaAutosize readonly>Dear {{model.cusname}},
 
 Thank you for contacting us at Massy Communications.
@@ -50,7 +50,7 @@ Thank you for choosing Massy Communications.
 
 Kind regards,
 {{user.firstname}} {{user.lastname}} on behalf of Massy Communications Customer Care Team</textarea>
-        </md-input-container>
+        </md-form-field>
       </md-card-content>
       <md-card-actions>
         <button md-button [ngxClipboard]='highspeed'>COPY</button>
