--- a/src/app/technical-form/technical-form.component.html
+++ b/src/app/technical-form/technical-form.component.html
@@ -19,15 +19,15 @@
     <br>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.serial" name="serial" mdInput placeholder="ONT Serial Number" >
-        </md-input-container>
+        </md-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input mdInput [(ngModel)]="model.date" name="date" [mdDatepicker]="myDatepicker" placeholder="Date issue first surfaced?">
           <button mdSuffix [mdDatepickerToggle]="myDatepicker"></button>
-        </md-input-container>
+        </md-form-field>
         <md-datepicker #myDatepicker></md-datepicker>
       </div>
     </div>
@@ -45,59 +45,59 @@
       </div>
     </div>
     <br>
-    <md-input-container class="technical-full-width">
+    <md-form-field class="technical-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.description" name="description" placeholder="Description of the issue"></textarea>
-    </md-input-container>
-    <md-input-container class="technical-full-width">
+    </md-form-field>
+    <md-form-field class="technical-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.steps" name="steps" placeholder="Steps taken to resolve the issue"></textarea>
-    </md-input-container>
-    <md-input-container class="technical-full-width">
+    </md-form-field>
+    <md-form-field class="technical-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.results" name="results" placeholder="Results of steps taken"></textarea>
-    </md-input-container>
-    <md-input-container class="technical-full-width">
+    </md-form-field>
+    <md-form-field class="technical-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.stb" name="stb" placeholder="STB MAC Information"></textarea>
-    </md-input-container>
-    <md-input-container class="technical-full-width">
+    </md-form-field>
+    <md-form-field class="technical-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.alarms" name="alarms" placeholder="Tableau / Alarm Analysis"></textarea>
-    </md-input-container>
-    <md-input-container class="technical-full-width">
+    </md-form-field>
+    <md-form-field class="technical-full-width">
       <textarea mdInput mdTextareaAutosize [(ngModel)]="model.attachments" name="attachments" placeholder="Attachments (DLO/AMSLogs screenshots)"></textarea>
-    </md-input-container>
+    </md-form-field>
     <h4 class="mat-h4">Customer network setup details:</h4>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.port1" name="port1" mdInput placeholder="Port 1" >
-        </md-input-container>
+        </md-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.port2" name="port2" mdInput placeholder="Port 2" >
-        </md-input-container>
+        </md-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.port3" name="port3" mdInput placeholder="Port 3" >
-        </md-input-container>
+        </md-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.port4" name="port4" mdInput placeholder="Port 4" >
-        </md-input-container>
+        </md-form-field>
       </div>
     </div>
     <div fxLayout="row">
       <div fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.ghz24" name="ghz24" mdInput placeholder="2.4 Ghz" >
-        </md-input-container>
+        </md-form-field>
       </div>
       <div fxFlexOffset="2%" fxFlex="49%">
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <input [(ngModel)]="model.ghz5" name="ghz5" mdInput placeholder="5 Ghz" >
-        </md-input-container>
+        </md-form-field>
       </div>
     </div>
   </div>
@@ -105,7 +105,7 @@
     <md-card>
       <md-card-title>{{title}} Template Preview</md-card-title>
       <md-card-content>
-        <md-input-container class="technical-full-width">
+        <md-form-field class="technical-full-width">
           <textarea #technical mdInput mdTextareaAutosize readonly>Is the Internet service affected?: {{model.internet}}
 
 Is the IPTV service affected?: {{model.iptv}}
@@ -138,7 +138,7 @@ Tableau / Alarm Analysis: {{model.alarms}}
 
 Attachments: {{model.attachments}}
           </textarea>
-        </md-input-container>
+        </md-form-field>
       </md-card-content>
       <md-card-actions>
         <button md-button [ngxClipboard]='technical'>COPY</button>
